--- a/site/src/main/webapp/WEB-INF/web.xml
+++ b/site/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,18 @@
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
     <!-- JSF mapping -->
+
+    <filter>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <filter-class>
+            org.primefaces.webapp.filter.FileUploadFilter
+        </filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <servlet-name>Faces Servlet</servlet-name>
+    </filter-mapping>
+
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
