--- a/site/pom.xml
+++ b/site/pom.xml
@@ -7,11 +7,9 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.engagepoint.labs</groupId>
     <artifactId>site</artifactId>
     <packaging>war</packaging>
-    <name>site Maven Webapp</name>
-    <url>http://maven.apache.org</url>
+    <name>site</name>
 
     <repositories>
         <repository>
@@ -31,7 +29,7 @@
         <dependency>
             <groupId>com.sun.faces</groupId>
             <artifactId>jsf-api</artifactId>
-            <version>2.1.7</version>
+            <version>2.2.0</version>
         </dependency>
         <dependency>
             <groupId>com.sun.faces</groupId>
@@ -43,10 +41,25 @@
             <artifactId>primefaces</artifactId>
             <version>3.5</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.primefaces</groupId>-->
+            <!--<artifactId>primefaces</artifactId>-->
+            <!--<version>4.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.engagepoint.labs</groupId>
             <artifactId>core</artifactId>
             <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId> commons-io</artifactId>
+            <version>2.4</version>
         </dependency>
     </dependencies>
 
