--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.chemistry.opencmis</groupId>
-            <artifactId>chemistry-opencmis-server-inmemory</artifactId>
-            <type>war</type>
-            <version>0.9.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.chemistry.opencmis</groupId>-->
+            <!--<artifactId>chemistry-opencmis-server-inmemory</artifactId>-->
+            <!--<type>war</type>-->
+            <!--<version>0.9.0</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.jbehave.web</groupId>
             <artifactId>jbehave-web-selenium</artifactId>
