--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <properties>
         <junit.version>4.11</junit.version>
         <log4j.version>1.2.17</log4j.version>
-        <slf4j.version>1.5.11</slf4j.version>
+        <!--<slf4j.version>1.5.11</slf4j.version>-->
     </properties>
 
     <dependencies>
@@ -28,17 +28,17 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.chemistry.opencmis</groupId>
-            <artifactId>chemistry-opencmis-server-inmemory</artifactId>
-            <type>war</type>
-            <version>0.9.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jbehave.web</groupId>
-            <artifactId>jbehave-web-selenium</artifactId>
-            <version>3.5.5</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.chemistry.opencmis</groupId>-->
+            <!--<artifactId>chemistry-opencmis-server-inmemory</artifactId>-->
+            <!--<type>war</type>-->
+            <!--<version>0.9.0</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.jbehave.web</groupId>-->
+            <!--<artifactId>jbehave-web-selenium</artifactId>-->
+            <!--<version>3.5.5</version>-->
+        <!--</dependency>-->
 
     </dependencies>
     <build>
