--- a/site/src/main/webapp/WEB-INF/web.xml
+++ b/site/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,11 @@
     </welcome-file-list>
     <!-- JSF mapping -->
 
+    <context-param>
+        <param-name>com.engagepoint.COLOR_SCHEMA</param-name>
+        <param-value>ux-blue</param-value>
+    </context-param>
+
     <filter>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
         <filter-class>
