--- a/site/pom.xml
+++ b/site/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>xerces</artifactId>
             <version>2.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.engagepoint</groupId>
+            <artifactId>ui-bootstrap-components</artifactId>
+            <version>1.6.3</version>
+        </dependency>
     </dependencies>
 
     <build>
