--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.apache.chemistry.opencmis</groupId>-->
-            <!--<artifactId>chemistry-opencmis-server-inmemory</artifactId>-->
-            <!--<type>war</type>-->
-            <!--<version>0.9.0</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.apache.chemistry.opencmis</groupId>
+            <artifactId>chemistry-opencmis-server-inmemory</artifactId>
+            <type>war</type>
+            <version>0.9.0</version>
+        </dependency>
         <dependency>
             <groupId>org.jbehave.web</groupId>
             <artifactId>jbehave-web-selenium</artifactId>
@@ -52,11 +52,11 @@
             </plugins>
         </pluginManagement>
         <plugins>
-            <!--<plugin>-->
-            <!--<groupId>org.codehaus.mojo</groupId>-->
-            <!--<artifactId>sonar-maven-plugin</artifactId>-->
-            <!--<version>2.0</version>-->
-            <!--</plugin>-->
+            <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>2.0</version>
+            </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.5.1</version>
