--- a/site/src/main/webapp/WEB-INF/web.xml
+++ b/site/src/main/webapp/WEB-INF/web.xml
@@ -30,10 +30,10 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
-    <context-param>
-        <param-name>primefaces.THEME</param-name>
-        <param-value>bootstrap</param-value>
-    </context-param>
+    <!--<context-param>-->
+        <!--<param-name>primefaces.THEME</param-name>-->
+        <!--<param-value>aristo</param-value>-->
+    <!--</context-param>-->
     <!-- Map these files with JSF -->
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
