--- a/site/pom.xml
+++ b/site/pom.xml
@@ -27,12 +27,6 @@
             <artifactId>jsf-impl</artifactId>
             <version>2.1.7</version>
         </dependency>
-
-        <!--<dependency>-->
-            <!--<groupId>org.primefaces</groupId>-->
-            <!--<artifactId>primefaces</artifactId>-->
-            <!--<version>4.0-SNAPSHOT</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>com.engagepoint.labs</groupId>
             <artifactId>core</artifactId>
@@ -49,16 +43,15 @@
             <version>2.4</version>
         </dependency>
         <dependency>
-            <groupId>xerces</groupId>
-            <artifactId>xerces</artifactId>
-            <version>2.2.1</version>
-        </dependency>
-        <dependency>
             <groupId>com.engagepoint</groupId>
             <artifactId>ui-bootstrap-components</artifactId>
             <version>1.6.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>3.5.8</version>
+        </dependency>
     </dependencies>
 
     <build>
