--- a/site/pom.xml
+++ b/site/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>primefaces</artifactId>
             <version>3.5.8</version>
         </dependency>
+        <dependency>
+            <groupId>com.engagepoint</groupId>
+            <artifactId>ezui-components</artifactId>
+            <version>2.0.2-M2</version>
+        </dependency>
     </dependencies>
 
     <build>
