--- a/site/pom.xml
+++ b/site/pom.xml
@@ -53,6 +53,11 @@
             <version>3.5.8</version>
         </dependency>
         <dependency>
+            <groupId>xerces</groupId>
+            <artifactId>xerces</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.engagepoint</groupId>
             <artifactId>ezui-components</artifactId>
             <version>2.0.2-M2</version>
